Prvi test, kompajliranje ne prolazi

--- a/frontend/src/cunjevi/makefile
+++ b/frontend/src/cunjevi/makefile
@@ -1,6 +1,6 @@
-all: unity KnockDownPin_Test main
+all: unity KnockDownPins_Test main
 
-.PHONY: all unity KnockDownPin_Test
+.PHONY: all unity KnockDownPins_Test
 
 unity:
 	$(MAKE) -C unity all
