Prepravljen unity/makefile

--- a/backend/unity/makefile
+++ b/backend/unity/makefile
@@ -1,6 +1,7 @@
-CC=gcc
-CFLAGS=-c -Wall
+all: unity.o unity_fixture.o
 
-unity.o: unity.c unity_fixture.c
-	$(CC) $(CFLAGS) unity.c unity_fixture.c
+unity.o:
+	gcc -c unity.c -o ../build/unity.o
 
+unity_fixture.o:
+	gcc -c unity_fixture.c -o ../build/unity_fixture.o
