--- a/backend/src/.gitignore
+++ b/backend/src/.gitignore
@@ -1,1 +1,9 @@
-~/
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+*.swp
+*.swo
