Izmjenjeni users.h i makefile-ovi, dodan users.c i users_test.c

--- a/backend/src/makefile
+++ b/backend/src/makefile
@@ -1,6 +1,7 @@
-all: bowling_stats.o
+all: bowling_stats.o users.o
 
 bowling_stats.o:
 	gcc -c bowling_stats.c -o ../build/bowling_stats.o
 
-
+users.o:
+	gcc -c users.c -o ../build/users.o
