--- a/backend/tests/makefile
+++ b/backend/tests/makefile
@@ -1,10 +1,10 @@
-all: bowling_test.o runall.o
+all: bowling_test.o users_test.o runall.o
 
 bowling_test.o:
 	gcc -c bowling_test.c -o ../build/bowling_test.o
 
+users_test.o:
+	gcc -c users_test.c -o ../build/users_test.o
 
 runall.o:
 	gcc -c runall.c -o ../build/runall.o
-
-
