Kreiranje shared biblioteka

--- a/backend/src/makefile
+++ b/backend/src/makefile
@@ -1,7 +1,7 @@
 all: bowling_stats.o users.o
 
 bowling_stats.o:
-	gcc -c bowling_stats.c -o ../build/bowling_stats.o
+	gcc -c -fPIC bowling_stats.c -o ../build/bowling_stats.o
 
 users.o:
-	gcc -c users.c -o ../build/users.o
+	gcc -c -fPIC users.c -o ../build/users.o
