--- a/frontend/src/makefile
+++ b/frontend/src/makefile
@@ -1,4 +1,4 @@
 all: bowling_gui.o
 
 bowling_gui.o:
-	gcc -c bowling_gui.c -o ../build/bowling_gui.o
+	gcc -c -fPIC bowling_gui.c -o ../build/bowling_gui.o
